--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root{
+  --color1: #ffffff;
+  --color2: #e8eca5;
+  --color3: #000000;
+  --color4: #feffee;
+  --color5: #fdffe7;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: var(--color5);
+  color: #000;
+  display: flex;
+  justify-content: center;
+  margin: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  width: 100%;
+  background-color: var(--color2);
+  position: absolute;
+  left: 0;
+  padding-left: 1rem;
+  box-sizing: border-box;
+}
+nav ul {
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  gap: 1rem;
+}
+nav a{
+  display: inline-block;
+  padding: 1rem 3rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+}
+nav a:hover, .active {
+  background-color: var(--color4);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+main {
+  background-color: var(--color1);
+  padding: 0rem 3rem;
+  padding-top: 7rem;
 }
